# io-backplane

./: Cargo.toml  README.md
src/: buffer.rs  lib.rs  mmap.rs
src/legacy/: mod.rs
src/ringbahn/: mod.rs
