[package]
name = "io-backplane"
version = "0.1.0"
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["uring"]
uring = ["libc", "maglev", "ringbahn"]

[dependencies]
# async-fs = "1.5.0"
blocking = "1.0.2"
concurrent-queue = "1.*"
# futures-micro = "0.4.0"
once_cell = "1.5.2"
smallvec = "1.4.2"

[dependencies.libc]
version = "0.2.80"
optional = true

[dependencies.ringbahn]
# path = "../ringbahn"
git = "https://github.com/ringbahn/ringbahn"
branch = "master"
optional = true

[dependencies.maglev]
# path = "../maglev"
git = "https://github.com/ringbahn/maglev"
branch = "master"
optional = true

# [patch.crates-io]
# uring-sys = { path = "../uring-sys" }
# libc = { path = "../libc" }
# ringbahn = { path = "../ringbahn" }
